apps/v34l-blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v34l-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v34l-blog
  template:
    metadata:
      labels:
        app: v34l-blog
    spec:
      containers:
        - name: v34l-blog
          image: core.harbor.v34l.com/hugo/0xV34L:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: v34l-blog-service
spec:
  selector:
    app: v34l-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
