apps/v34l-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v34l-blog-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: blog.v34l.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: v34l-blog-service
            port:
              number: 80
  tls:
    - hosts:
      - blog.v34l.com
      secretName: blog-secret
